--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -11,6 +11,9 @@
       "datePublished":"#{article.created_at}",
       "dateModified": "#{article.updated_at}"
       }
+-#= content_for :title
+-#= content_for :description
+-#= content_for :locale
 
 %section{class: "mt-8 font-messiri max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col justify-between"}
   %div{class: "text-center"}
