--- a/app/views/articles/_article.html.haml
+++ b/app/views/articles/_article.html.haml
@@ -1,19 +1,20 @@
-%div{class: "container max-w-7xl mx-auto my-10 font-messiri"}
-  %div{class: "flex flex-wrap justify-between"}
-    %div{class: "w-full px-4"}
-      %sectionmx-auto{class: "p-5 sm:p-10 md:p-16 relative font-messiri"}
-        - if @article.image.present?
-          %div{class: "bg-cover bg-center text-center overflow-hidden", style: "min-height: 450px; background-image: url('#{url_for(@article.image)}')", title: @article.title, role: "img", "aria-label": @article.title}
-        - else
-          %div{class: "bg-cover bg-center text-center overflow-hidden", style: "min-height: 450px; background-image: url('#{asset_path("favicon.png")}')", title: @article.title, role: "img", "aria-label": @article.title}
-        %div{class: "max-w-5xl mx-auto mb-8"}
-          %div{class: "mt-3 bg-white rounded-b lg:rounded-b-none lg:rounded-r flex flex-col justify-between leading-normal"}
-            %div{class: "bg-white relative top-0 -mt-32 p-5 sm:p-10"}
-              %h1{class: "text-stone-900 font-bold text-3xl mb-2"}
-                = @article.title
-              %blockquote{class: "text-base leading-8 my-5 text-stone-700 mb-4 text-2xl border-s-4 border-stone-300 p-4 shadow-md"}
-                = @article.description
-              %p{class: "text-base leading-8 my-5"}
-                = @article.body
-          %div{class: "text-end p-4"}
-            = link_to "#{t ("service.back")}", articles_path, class: "justify-end text-xl hover:border-b-2 hover:border-red-500 text-stone-500 hover:text-stone-900"
+= turbo_frame_tag @article do
+  %div{class: "container max-w-7xl mx-auto my-10 font-messiri"}
+    %div{class: "flex flex-wrap justify-between"}
+      %div{class: "w-full px-4"}
+        %section{class: "p-5 sm:p-10 md:p-16 relative font-messiri"}
+          - if @article.image.present?
+            %div{class: "bg-cover bg-center text-center overflow-hidden", style: "min-height: 450px; background-image: url('#{url_for(@article.image)}')", title: @article.title, role: "img", "aria-label": @article.title}
+          - else
+            %div{class: "bg-cover bg-center text-center overflow-hidden", style: "min-height: 450px; background-image: url('#{asset_path("favicon.png")}')", title: @article.title, role: "img", "aria-label": @article.title}
+          %div{class: "max-w-5xl mx-auto mb-8"}
+            %div{class: "mt-3 bg-white rounded-b lg:rounded-b-none lg:rounded-r flex flex-col justify-between leading-normal"}
+              %div{class: "bg-white relative top-0 -mt-32 p-5 sm:p-10"}
+                %h1{class: "text-stone-900 font-bold text-3xl mb-2"}
+                  = @article.title
+                %blockquote{class: "text-base leading-8 my-5 text-stone-700 mb-4 text-2xl border-s-4 border-stone-300 p-4 shadow-md"}
+                  = @article.description
+                %p{class: "text-base leading-8 my-5"}
+                  = @article.body
+            %div{class: "text-end p-4"}
+              = link_to "#{t ("service.back")}", articles_path, class: "justify-end text-xl hover:border-b-2 hover:border-red-500 text-stone-500 hover:text-stone-900"
