--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -33,5 +33,6 @@
           %div{class: "h-4 bg-gray-300 rounded w-1/2"}
           %div{class: "h-4 bg-gray-300 rounded"}
           %div{class: "h-4 bg-gray-300 rounded"}
-  
-= render @article
+
+= turbo_frame_tag dom_id(@article) do
+  = render @article
