--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -9,7 +9,7 @@
       "alternateName": "#{service.subtitle}",
       "description":"#{service.description}",
       "url":"#{service_url(service)}",
-      "image":"#{url_for(service.image)}",
+      "image":"#{service_url(service) + rails_blob_path(service.image, disposition: "attachment", only_path: true)}",
       "brand":"☞ДРУЖБА☜",
       "offers": [
       {
