--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -6,7 +6,7 @@
       "@type": "Article",
       "headline": "#{article.title}",
       "description": "#{article.description}",
-      "image":"#{service_url(@article) + rails_blob_path(@article.image, disposition: "attachment", only_path: true)}",
+      "image":"#{service_url(article) + rails_blob_path(article.image, disposition: "attachment", only_path: true)}",
       "url": "#{article_url(article)}",
       "datePublished":"#{article.created_at}",
       "dateModified": "#{article.updated_at}"
