--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,13 +7,15 @@
     
     %title
       - if I18n.locale == :uk
-        = @page_title.present? ? "#{@page_title}" : "Швейна майстерня ☞ ДРУЖБА ☜"
+        = @page_title.present? ? "#{@page_title.truncate(70)}" : "Швейна майстерня ☞ ДРУЖБА ☜"
+        -#= @page_title
       - else
-        = @page_title.present? ? "#{@page_title}" : "Швейная мастерская ☞ДРУЖБА☜"
+        -#= @page_title
+        = @page_title.present? ? "#{@page_title.truncate(70)}" : "Швейная мастерская ☞ДРУЖБА☜"
     = favicon_link_tag asset_path('favicon.png')
     %meta{content: "text/html; charset=UTF-8", "http-equiv": "Content-Type"}
     %meta{name: "viewport", content: "width=device-width, initial-scale=1.0"}
-    %meta{name: "description", content: "#{@page_description}"}
+    %meta{name: "description", content: "#{@page_description.truncate(160)}"}
     %meta{name: "revisit-after", content: "1 days"}
     %meta{name: "google-adsense-account", content: "ca-pub-3829218691602401"}
 
