--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -66,3 +66,5 @@
 
     -# Cookies bar
     = render "shared/cookies_bar" if @cookie_value.nil?
+
+    %script{async: true, crossorigin: "anonymous", src: "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3829218691602401"}
