--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -82,6 +82,11 @@
           -#%div{class: "pe-2 pb-2 text-red-500 w-full flex justify-end items-end"}
           -#  %div{class: "pe-2 sm:pe-4 w-full sm:w-2/3 border-t-2 border-red-300 text-end"}
           -#    Докладніше
+    %script{:async => "", :crossorigin => "anonymous", :src => "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3829218691602401"}
+    %ins.adsbygoogle{"data-ad-client" => "ca-pub-3829218691602401", "data-ad-format" => "fluid", "data-ad-layout-key" => "-6i+cd-2-3r+ld", "data-ad-slot" => "3777827084", :style => "display:block"}
+    :javascript
+      (adsbygoogle = window.adsbygoogle || []).push({});
+
 
 %div{class: "mx-auto p-5 sm:p-10 md:p-16"}
   %h2{class: "text-center my-4 text-xl text-stone-500 sm:text-2xl leading-normal font-extrabold tracking-tight"}
@@ -103,3 +108,7 @@
           -#%div{class: "pe-2 pb-2 text-red-500 w-full flex justify-end items-end"}
           -#  %div{class: "pe-2 sm:pe-4 w-full sm:w-2/3 border-t-2 border-red-300 text-end"}
           -#    Докладніше
+    %script{:async => "", :crossorigin => "anonymous", :src => "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3829218691602401"}
+    %ins.adsbygoogle{"data-ad-client" => "ca-pub-3829218691602401", "data-ad-format" => "fluid", "data-ad-layout-key" => "-6i+cd-2-3r+ld", "data-ad-slot" => "3777827084", :style => "display:block"}
+    :javascript
+      (adsbygoogle = window.adsbygoogle || []).push({});
