--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -82,6 +82,8 @@
           -#%div{class: "pe-2 pb-2 text-red-500 w-full flex justify-end items-end"}
           -#  %div{class: "pe-2 sm:pe-4 w-full sm:w-2/3 border-t-2 border-red-300 text-end"}
           -#    Докладніше
+    
+    -# AdSense block
     %script{:async => "", :crossorigin => "anonymous", :src => "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3829218691602401"}
     %ins.adsbygoogle{"data-ad-client" => "ca-pub-3829218691602401", "data-ad-format" => "fluid", "data-ad-layout-key" => "-6i+cd-2-3r+ld", "data-ad-slot" => "3777827084", :style => "display:block"}
     :javascript
@@ -108,6 +110,8 @@
           -#%div{class: "pe-2 pb-2 text-red-500 w-full flex justify-end items-end"}
           -#  %div{class: "pe-2 sm:pe-4 w-full sm:w-2/3 border-t-2 border-red-300 text-end"}
           -#    Докладніше
+    
+    -# AdSense block
     %script{:async => "", :crossorigin => "anonymous", :src => "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3829218691602401"}
     %ins.adsbygoogle{"data-ad-client" => "ca-pub-3829218691602401", "data-ad-format" => "fluid", "data-ad-layout-key" => "-6i+cd-2-3r+ld", "data-ad-slot" => "3777827084", :style => "display:block"}
     :javascript
