--- a/app/views/articles/_article.html.haml
+++ b/app/views/articles/_article.html.haml
@@ -14,6 +14,13 @@
                   = @article.title
                 %blockquote{class: "text-base leading-8 my-5 text-stone-700 mb-4 text-2xl border-s-4 border-stone-300 p-4 shadow-md"}
                   = @article.description
+                
+                -# AdSense block
+                %script{:async => "", :crossorigin => "anonymous", :src => "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3829218691602401"}
+                %ins.adsbygoogle{"data-ad-client" => "ca-pub-3829218691602401", "data-ad-format" => "fluid", "data-ad-layout" => "in-article", "data-ad-slot" => "4746497666", :style => "display:block; text-align:center;"}
+                :javascript
+                  (adsbygoogle = window.adsbygoogle || []).push({});
+
                 %p{class: "text-base leading-8 my-5"}
                   = @article.body
             %div{class: "text-end p-4"}
