--- a/app/views/landing/contacts.html.haml
+++ b/app/views/landing/contacts.html.haml
@@ -7,6 +7,14 @@
     = t ("contacts.p_12")
   %p{class: "mb-3 text-xl text-stone-500 text-justify indent-8"}
     = t ("contacts.p_13")
+
+  -# AdSense block media
+  %script{:async => "", :crossorigin => "anonymous", :src => "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3829218691602401"}
+  / test media
+  %ins.adsbygoogle{"data-ad-client" => "ca-pub-3829218691602401", "data-ad-format" => "auto", "data-ad-slot" => "9965566145", "data-full-width-responsive" => "true", :style => "display:block"}
+  :javascript
+    (adsbygoogle = window.adsbygoogle || []).push({});
+
   
   %div{class: "text-center lg:text-left my-10"}
     %div{class: ""}
