--- a/app/views/landing/faq.html.haml
+++ b/app/views/landing/faq.html.haml
@@ -50,6 +50,14 @@
               = t ("faq.a3_2")
           %div{class: "hidden sm:flex items-center justify-center p-3 ml-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-comment-dots"}
+      
+      -# AdSense block media
+      %script{:async => "", :crossorigin => "anonymous", :src => "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3829218691602401"}
+      / test media
+      %ins.adsbygoogle{"data-ad-client" => "ca-pub-3829218691602401", "data-ad-format" => "auto", "data-ad-slot" => "9965566145", "data-full-width-responsive" => "true", :style => "display:block"}
+      :javascript
+        (adsbygoogle = window.adsbygoogle || []).push({});
+      
       -#
       %li{class: "text-left mb-4"}
         %div{class: "flex flex-row items-start mb-2"}
