--- a/app/views/landing/faq.html.haml
+++ b/app/views/landing/faq.html.haml
@@ -71,7 +71,7 @@
       -# AdSense block media
       %script{:async => "", :crossorigin => "anonymous", :src => "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3829218691602401"}
       / test media
-      %ins.adsbygoogle{"data-ad-client" => "ca-pub-3829218691602401", "data-ad-format" => "auto", "data-ad-slot" => "9965566145", "data-full-width-responsive" => "true", :style => "display:block"}
+      %ins.adsbygoogle{height: "100px", "data-ad-client" => "ca-pub-3829218691602401", "data-ad-format" => "auto", "data-ad-slot" => "9965566145", "data-full-width-responsive" => "true", :style => "display:block"}
       :javascript
         (adsbygoogle = window.adsbygoogle || []).push({});
 
