add facebook pixel events

--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -12,6 +12,9 @@
       "dateModified": "#{@article.updated_at}"
       }
 
+:javascript
+  fbq('track', 'ViewContent');
+
 = turbo_frame_tag dom_id(@article), src: article_path(@article) do
   %div{id: "article_skeleton"}
     %div{class: "min-h-screen bg-white mt-12"}
