--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -22,6 +22,9 @@
       ]
       }
 
+:javascript
+  fbq('track', 'ViewContent');
+
 %section{class: "mt-8 font-messiri max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col justify-between"}
   %div{class: "text-center"}
     %h1{class: "text-3xl text-red-500 sm:text-4xl leading-normal font-extrabold tracking-tight"}
