--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -21,6 +21,8 @@
       }
       ]
       }
+:javascript
+  fbq('track', 'ViewContent');
 
 %div{class: "container mx-auto my-4 font-messiri"}
   %h1{class: "text-3xl text-red-500 sm:text-4xl text-center leading-normal font-bold"}
