--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,9 +1,9 @@
 %div{class: "font-messiri py-4 px-4 shadow-md z-10 bg-stone-200"}
-  %div{class: "flex flex-col md:flex-row md:justify-content-center md:align-items-center"}
+  %div{class: "flex flex-col sm:flex-row justify-between"}
     %div{class: "hidden sm:block"}
       %a{href: "https://www.digitalocean.com/?refcode=92959b0d393a&utm_campaign=Referral_Invite&utm_medium=Referral_Program&utm_source=badge", target: "_blank"}
         %img{alt: "DigitalOcean Referral Badge", src: "https://web-platforms.sfo2.cdn.digitaloceanspaces.com/WWW/Badge%202.svg", height: "auto", width: "100px"}
-    %div{class: "text-sm text-gray-600 my-auto px-2 md:block flex justify-center"}
+    %div{class: "text-sm text-gray-600 my-auto px-2 sm:inline-block flex justify-center"}
       %div{class: "hidden sm:block"}
         © 2022-#{Date.today.strftime('%Y')}
       = link_to "#{t ("footer")}", root_path, class: "px-2"
@@ -11,6 +11,6 @@
         %i{class: "fa-brands fa-facebook"}
       = link_to "https://www.instagram.com/pismenenkoborshchova", target: "_blank", class: "text-orange-500 mx-1" do
         %i{class: "fa-brands fa-instagram"}
-    %div{class: "text-sm text-gray-600 md:block flex justify-center my-auto"}
+    %div{class: "text-sm text-gray-600 flex justify-center my-auto"}
       %a{href: "mailto:admin@druzhba.biz.ua"} admin@druzhba.biz.ua
       
