--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -22,7 +22,17 @@
       ]
       }
 :javascript
-  fbq('track', 'ViewContent');
+  fbq('track', 'ViewContent', {
+    content_ids: ["#{@service.id}"],
+    content_type: 'service',
+    content_name: "#{@service.title}",
+    content_category: 'Services',
+    value: "#{@service.price}",
+    currency: 'UAH',
+    description: "#{@service.description}",
+    url: "#{service_url(@service)}",
+    image: "#{service_url(@service) + rails_blob_path(@service.image, disposition: "attachment", only_path: true)}"
+  });
 
 %div{class: "container mx-auto my-4 font-messiri"}
   %h1{class: "text-3xl text-red-500 sm:text-4xl text-center leading-normal font-bold"}
