--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -31,11 +31,11 @@
     currency: 'UAH',
     description: "#{@service.description}",
     url: "#{service_url(@service)}",
-    image: "#{service_url(@service) + rails_blob_path(@service.image, disposition: "attachment", only_path: true)}"
-    availability_circle_origin: 'WF34+6W Кривой Рог, Днепропетровская область'
-    availability_postal_codes: '50055'
-    availability_circle_radius: '0'
-    availability: 'https://schema.org/InStock'
+    image: "#{service_url(@service) + rails_blob_path(@service.image, disposition: "attachment", only_path: true)}",
+    availability_circle_origin: 'WF34+6W Кривой Рог, Днепропетровская область',
+    availability_postal_codes: '50055',
+    availability_circle_radius: '0',
+    availability: 'https://schema.org/InStock',
     address: 'Кривий Рiг, ул. Кокчетавска 3'
   });
 
