--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -24,7 +24,7 @@
 :javascript
   fbq('track', 'ViewContent', {
     content_ids: ["#{@service.id}"],
-    content_type: 'service',
+    content_type: 'product',
     content_name: "#{@service.title}",
     content_category: 'Services',
     value: "#{@service.price}",
@@ -32,11 +32,11 @@
     description: "#{@service.description}",
     url: "#{service_url(@service)}",
     image: "#{service_url(@service) + rails_blob_path(@service.image, disposition: "attachment", only_path: true)}",
-    availability_circle_origin: 'WF34+6W Кривой Рог, Днепропетровская область',
-    availability_postal_codes: '50055',
-    availability_circle_radius: '0',
-    availability: 'https://schema.org/InStock',
-    address: 'Кривий Рiг, ул. Кокчетавска 3'
+    //availability_circle_origin: 'WF34+6W Кривой Рог, Днепропетровская область',
+    //availability_postal_codes: '50055',
+    //availability_circle_radius: '0',
+    //availability: 'https://schema.org/InStock',
+    //address: 'Кривий Рiг, ул. Кокчетавска 3'
   });
 
 %div{class: "container mx-auto my-4 font-messiri"}
