--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,7 +27,7 @@
     = stylesheet_link_tag "custom", "data-turbo-track": "reload", nonce: true
     = javascript_include_tag "application", "data-turbo-track": "reload", defer: true, async: true, nonce: true
 
-    / Meta Pixel Code
+    -# Meta Pixel Code
     :javascript
       !function(f,b,e,v,n,t,s)
       {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
