--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -70,6 +70,12 @@
 
     %div{class: "px-4 lg:w-4/12"}
       %div{class: "bg-stone-100 px-4 py-6 rounded"}
+        -# AdSense block
+        %script{:async => "", :crossorigin => "anonymous", :src => "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3829218691602401"}
+        %ins.adsbygoogle{"data-ad-client" => "ca-pub-3829218691602401", "data-ad-format" => "fluid", "data-ad-layout" => "in-article", "data-ad-slot" => "1831795375", :style => "display:block; text-align:center;"}
+        :javascript
+          (adsbygoogle = window.adsbygoogle || []).push({});
+
         %h3{class: "text-lg font-bold mb-2"} 
           = t ("service.h3")
         %ul{class: "list-outside"}
