--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -57,7 +57,7 @@
               %blockquote{class: "text-base leading-8 my-5 text-stone-700 mb-4 text-2xl border-s-4 border-stone-300 p-4 shadow-md"}
                 = @service.description
 
-              -# AdSense block
+              -# AdSense block test article
               %script{:async => "", :crossorigin => "anonymous", :src => "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3829218691602401"}
               %ins.adsbygoogle{"data-ad-client" => "ca-pub-3829218691602401", "data-ad-format" => "fluid", "data-ad-layout" => "in-article", "data-ad-slot" => "4746497666", :style => "display:block; text-align:center;"}
               :javascript
@@ -70,7 +70,7 @@
 
     %div{class: "px-4 lg:w-4/12"}
       %div{class: "bg-stone-100 px-4 py-6 rounded"}
-        -# AdSense block
+        -# AdSense block test article 2
         %script{:async => "", :crossorigin => "anonymous", :src => "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3829218691602401"}
         %ins.adsbygoogle{"data-ad-client" => "ca-pub-3829218691602401", "data-ad-format" => "fluid", "data-ad-layout" => "in-article", "data-ad-slot" => "1831795375", :style => "display:block; text-align:center;"}
         :javascript
