--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -52,7 +52,7 @@
             = image_tag(service.image.variant(convert: "avif", resize_to_limit: [250, 125]), class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0", alt: service.title, loading: 'lazy')
           - else
             = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0", alt: service.title, loading: 'lazy')
-          %div{class: "p-4 pt-2 h-auto md:min-h-[200px] md:max-h-[400px] lg:max-h-[450px] xl:max-h-[450px] 2xl:w-max-300"}
+          %div{class: "px-4 py-2 h-auto md:h-64 lg:h-48 xl:h-40"}
             %div{class: "mb-8"}
               %h3{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
                 = service.title
@@ -77,7 +77,7 @@
             = image_tag(service.image.variant(convert: "avif", resize_to_limit: [250, 125]), class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title, loading: 'lazy')
           - else
             = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title, loading: 'lazy')
-          %div{class: "p-4 pt-2 h-auto md:min-h-[200px] md:max-h-[400px] lg:max-h-[450px] xl:max-h-[450px] 2xl:w-max-300"}
+          %div{class: "px-4 py-2 h-auto md:h-64 lg:h-48 xl:h-40"}
             %div{class: "mb-8"}
               %h3{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
                 = service.title
