--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -5,11 +5,11 @@
 :javascript
   fbq('track', 'ViewContent');
 
-%section{class: "mt-8 font-messiri max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col justify-between"}
+%section{class: "mt-8 font-messiri mx-auto px-4 sm:px-6 lg:px-8 flex flex-col justify-between"}
   %div{class: "text-center"}
     %h1{class: "text-3xl text-red-500 sm:text-4xl leading-normal font-extrabold tracking-tight"}
       = t ("articles.h1")
-%div{class: "max-w-7xl mx-auto p-5 sm:p-10 md:p-16"}
+%div{class: "mx-auto p-5 sm:p-10 md:p-16"}
   = turbo_frame_tag "articles_list", src: articles_url(format: :turbo_stream, page: params[:page]), loading: "lazy" do
     %div{id: "articles_card_skeleton", class: "mb-28 grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2 xl:grid-cols-4 lg:grid-cols-4 gap-10"}
       - 4.times do
