--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,6 +21,7 @@
     = javascript_include_tag "application", "data-turbo-track": "reload", defer: true, async: true, nonce: true
 
     -# Meta Pixel Code
+    %meta{content: "c4iyqbhq6lzkda2zk3t9xgbnd162ag", name: "facebook-domain-verification"}
     :javascript
       !function(f,b,e,v,n,t,s)
       {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
