--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -11,7 +11,7 @@
   %div{class: ""}
     = link_to "https://facebook.com/druzhba.biz.ua", target: "_blank", class: "text-blue-500 mx-1" do
       %i{class: "fa-brands fa-facebook"}
-    = link_to "https://www.instagram.com/pismenenkoborshchova", target: "_blank", class: "text-orange-500 mx-1" do
+    = link_to "https://www.instagram.com/druzhba.biz.ua", target: "_blank", class: "text-orange-500 mx-1" do
       %i{class: "fa-brands fa-instagram"}
 
 %nav{class: "w-full z-20 shadow-md border-gray-200 mt-auto font-messiri"}
