--- a/app/views/shared/_3_hero_section.html.haml
+++ b/app/views/shared/_3_hero_section.html.haml
@@ -2,12 +2,12 @@
   %div{class: "py-3 sm:py-6 text-center"}
     %h2{class: "font-messiri text-red-500 text-2xl font-medium uppercase lg:text-3xl"}
       = t "landing.examples.h2"
-  
+   
   %div{"data-controller": "landing--gallery"}
     %div{class: "grid justify-items-center content-center grid-cols-1 xs:grid-cols-2 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-4 xl:grid-cols-4 2xl:grid-cols-4 gap-4 gallery"}
-      = image_tag "1-min.jpg", "data-landing--gallery-target": "image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center rounded-xl", alt: "Швейная мастерская ☞ДРУЖБА☜ Кривой рог", loading: 'lazy'
-      = image_tag "2-min.jpg", "data-landing--gallery-target": "image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center rounded-xl", alt: "Швейная мастерская ☞ДРУЖБА☜ Кривой рог", loading: 'lazy'
-      = image_tag "3-min.jpg", "data-landing--gallery-target": "image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center rounded-xl", alt: "Швейная мастерская ☞ДРУЖБА☜ Кривой рог", loading: 'lazy'
+      = image_tag "1-min.jpg", "data-landing--gallery-target": "image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center rounded-xl", alt: "Швейная мастерская ☞ДРУЖБА☜ Кривой рог", loading: 'lazy', "data-aos": "zoom-in"
+      = image_tag "2-min.jpg", "data-landing--gallery-target": "image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center rounded-xl", alt: "Швейная мастерская ☞ДРУЖБА☜ Кривой рог", loading: 'lazy', "data-aos": "zoom-in"
+      = image_tag "3-min.jpg", "data-landing--gallery-target": "image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center rounded-xl", alt: "Швейная мастерская ☞ДРУЖБА☜ Кривой рог", loading: 'lazy', "data-aos": "zoom-in"
       -#= image_tag "1-min.jpg", "data-landing--gallery-target": "image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center rounded-xl", alt: "Швейная мастерская ☞ДРУЖБА☜ Кривой рог"
       -#= image_tag "2-min.jpg", "data-landing--gallery-target": "image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center rounded-xl", alt: "Швейная мастерская ☞ДРУЖБА☜ Кривой рог"
       -#= image_tag "3-min.jpg", "data-landing--gallery-target": "image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center rounded-xl", alt: "Швейная мастерская ☞ДРУЖБА☜ Кривой рог"
