--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -33,6 +33,8 @@
             document.getElementById('openContactForm').addEventListener('click', function() {
               fbq('track', 'Lead');
             });
+
+
         -# Switch locales
         - I18n.available_locales.each do |locale|
           %div{class: "relative inline-block text-senter my-auto mx-1"}
@@ -42,7 +44,9 @@
                   = t(locale, scope: 'locales')
               - else
                 %div{class: "text-md lg:text-xl p-1"}
-                  = link_to t(locale, scope: 'locales'), root_path(locale: locale), class: "hover:border-b-2 hover:border-red-500"
+                  = link_to t(locale, scope: 'locales'), locale_switch_path(locale), class: "hover:border-b-2 hover:border-red-500"
+
+
 
     %div{id: "navMenu", class: "text-center items-center justify-between hidden w-full md:flex md:w-auto md:order-1"}
       %ul{class: "flex flex-col p-2 md:p-0 mt-2 font-medium rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-stone-100"}
