--- a/app/views/shared/_3_hero_section.html.haml
+++ b/app/views/shared/_3_hero_section.html.haml
@@ -1,15 +1,18 @@
-%section{class: "font-messiri bg-white relative items-center w-full px-5 py-12 mx-auto md:px-12 lg:px-24 max-w-7xl"}
-  %div{class: "py-3 sm:py-6 text-center"}
-    %h2{class: "font-messiri text-red-500 text-2xl font-medium uppercase lg:text-3xl"}
-      = t "landing.examples.h2"
-   
-  %div{"data-controller": "landing--gallery"}
-    %div{class: "grid justify-items-center content-center grid-cols-1 xs:grid-cols-2 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-4 xl:grid-cols-4 2xl:grid-cols-4 gap-4 gallery"}
-      = image_tag "1-min.jpg", "data-landing--gallery-target": "image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center rounded-xl", alt: "Швейная мастерская ☞ДРУЖБА☜ Кривой рог", loading: 'lazy', "data-aos": "zoom-in"
-      = image_tag "2-min.jpg", "data-landing--gallery-target": "image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center rounded-xl", alt: "Швейная мастерская ☞ДРУЖБА☜ Кривой рог", loading: 'lazy', "data-aos": "zoom-in"
-      = image_tag "3-min.jpg", "data-landing--gallery-target": "image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center rounded-xl", alt: "Швейная мастерская ☞ДРУЖБА☜ Кривой рог", loading: 'lazy', "data-aos": "zoom-in"
-      -#= image_tag "1-min.jpg", "data-landing--gallery-target": "image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center rounded-xl", alt: "Швейная мастерская ☞ДРУЖБА☜ Кривой рог"
-      -#= image_tag "2-min.jpg", "data-landing--gallery-target": "image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center rounded-xl", alt: "Швейная мастерская ☞ДРУЖБА☜ Кривой рог"
-      -#= image_tag "3-min.jpg", "data-landing--gallery-target": "image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center rounded-xl", alt: "Швейная мастерская ☞ДРУЖБА☜ Кривой рог"
-      -#= image_tag "1-min.jpg", "data-landing--gallery-target": "image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center rounded-xl", alt: "Швейная мастерская ☞ДРУЖБА☜ Кривой рог"
-      -#= image_tag "2-min.jpg", "data-landing--gallery-target": "image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center rounded-xl", alt: "Швейная мастерская ☞ДРУЖБА☜ Кривой рог"
+-#= image_tag "1-min.jpg", id: "image-1", "data-landing--gallery-target": "image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center rounded-xl", alt: "Изображение 1", loading: 'lazy', "data-aos": "zoom-in", onclick: "openModal(this.src)"
+-#= image_tag "2-min.jpg", id: "image-2", "data-landing--gallery-target": "image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center rounded-xl", alt: "Изображение 2", loading: 'lazy', "data-aos": "zoom-in", onclick: "openModal(this.src)"
+-#= image_tag "3-min.jpg", id: "image-3", "data-landing--gallery-target": "image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center rounded-xl", alt: "Изображение 3", loading: 'lazy', "data-aos": "zoom-in", onclick: "openModal(this.src)"
+
+
+%div{ class: "grid grid-cols-2 md:grid-cols-4 gap-4 p-4" }
+  - (1..3).each do |i|
+    = image_tag("#{i}-min.jpg", alt: "Изображение #{i}", class: "cursor-pointer rounded-lg shadow hover:shadow-lg", data: { modal_target: "image-modal-#{i}", modal_toggle: "image-modal-#{i}" })
+
+- (1..3).each do |i|
+  %div{ id: "image-modal-#{i}", tabindex: "-1", "aria-hidden": "true", class: "hidden fixed inset-0 z-50 overflow-y-auto" }
+    %div{ class: "flex items-center justify-center h-full" }
+      %div{ class: "relative p-4 w-full max-w-lg md:max-w-2xl h-auto" }
+        %div{ class: "relative bg-white rounded-lg shadow dark:bg-gray-700" }
+          %button{ type: "button", class: "absolute top-3 right-3 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8", data: { modal_hide: "image-modal-#{i}" } }
+            %svg{ class: "w-3 h-3", aria: { hidden: "true" }, xmlns: "http://www.w3.org/2000/svg", fill: "none", viewBox: "0 0 14 14" }
+              %path{ stroke: "currentColor", "stroke-linecap": "round", "stroke-linejoin": "round", "stroke-width": "2", d: "m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" }
+          = image_tag("#{i}-min.jpg", alt: "Изображение #{i}", class: "w-full h-auto rounded-lg")
