--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -6,8 +6,8 @@
     = render "shared/1_hero_section"  
 %div{class: "z-0", id: "services"}
   = render "shared/2_services"
-%div{class: "z-100 mt-8", id: "hero-section-2", "data-aos": "zoom-in"}
-  = render "shared/3_hero_section"
+-#%div{class: "z-100 mt-8", id: "hero-section-2", "data-aos": "zoom-in"}
+-#  = render "shared/3_hero_section"
 = cache 'about' do
   %div{class: "z-0 mt-8", id: "about", "data-aos": "zoom-in"}
     = render "shared/5_about"
