--- a/app/views/articles/_article.html.haml
+++ b/app/views/articles/_article.html.haml
@@ -21,7 +21,7 @@
                 :javascript
                   (adsbygoogle = window.adsbygoogle || []).push({});
 
-                %p{class: "text-base leading-8 my-5"}
+                %p{class: "text-base leading-8 my-5", "data-controller": "turbo"}
                   = @article.body
             %div{class: "text-end p-4"}
               = link_to "#{t ("service.back")}", articles_path, "data-turbo": "false", class: "justify-end text-xl hover:border-b-2 hover:border-red-500 text-stone-500 hover:text-stone-900"
