--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -38,5 +38,5 @@
           %div{class: "h-4 bg-gray-300 rounded"}
           %div{class: "h-4 bg-gray-300 rounded"}
 
-= turbo_frame_tag dom_id(@article) do
-  = render @article
+= render @article
+-#, data: {controller: "turbo"}
