--- a/app/views/shared/_5_about.html.haml
+++ b/app/views/shared/_5_about.html.haml
@@ -1,12 +1,12 @@
 %section{class: "container font-messiri mx-auto px-4 bg-stone-100 py-8 md:py-10 lg:py-14"}
   %div{class: ""}
-    %div{class: "max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"}
+    %div{class: "mx-auto px-4 sm:px-6 lg:px-8"}
       %div{class: "text-center"}
         %h2{class: "font-messiri text-red-500 text-2xl font-medium uppercase lg:text-3xl"}
           = t ("landing.about.h2")
         %p{class: "font-heading mt-2 text-3xl leading-8 font-semibold tracking-tight text-red-500 sm:text-4xl"}
           = t ("landing.about.p1")
-        %p{class: "mt-4 max-w-2xl text-lg text-gray-500 lg:mx-auto"}
+        %p{class: "mt-4 text-lg text-gray-500 lg:mx-auto"}
           = t ("landing.about.p2")
       %div{class: "mt-10"}
         %dl{class: "space-y-10 md:space-y-0 md:grid md:grid-cols-2 md:gap-x-8 md:gap-y-10"}
@@ -42,8 +42,8 @@
                 = t ("landing.about.dl4.p")
             %dd{class: "mt-2 ml-16 text-base text-gray-500 text-justify"}
               = t ("landing.about.dl4.dd")
-      %div{class: "text-center"}
-        %h3{class: "mt-8 max-w-5xl text-2xl text-red-500 mx-auto font-semibold"}
+      %div{class: "text-center pt-4"}
+        %h3{class: "mt-8text-2xl text-red-500 mx-auto font-semibold"}
           %span{class:""}
             = t ("landing.about.h3_1")
           %span{class:""}
