--- a/app/views/shared/_3_hero_section.html.haml
+++ b/app/views/shared/_3_hero_section.html.haml
@@ -1,18 +1,49 @@
--#= image_tag "1-min.jpg", id: "image-1", "data-landing--gallery-target": "image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center rounded-xl", alt: "Изображение 1", loading: 'lazy', "data-aos": "zoom-in", onclick: "openModal(this.src)"
--#= image_tag "2-min.jpg", id: "image-2", "data-landing--gallery-target": "image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center rounded-xl", alt: "Изображение 2", loading: 'lazy', "data-aos": "zoom-in", onclick: "openModal(this.src)"
--#= image_tag "3-min.jpg", id: "image-3", "data-landing--gallery-target": "image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center rounded-xl", alt: "Изображение 3", loading: 'lazy', "data-aos": "zoom-in", onclick: "openModal(this.src)"
+/ Modal toggle
+%button.block.text-white.bg-blue-700.hover:bg-blue-800.focus:ring-4.focus:outline-none.focus:ring-blue-300.font-medium.rounded-lg.text-sm.px-5.text-center.dark:bg-blue-600.dark:hover:bg-blue-700.dark:focus:ring-blue-800{:class => "py-2.5", "data-modal-target" => "default-modal", "data-modal-toggle" => "default-modal", :type => "button"}
+  Toggle modal
+/ Main modal
+#default-modal.hidden.overflow-y-auto.overflow-x-hidden.fixed.top-0.right-0.left-0.z-50.justify-center.items-center.w-full.md:inset-0.max-h-full{"aria-hidden" => "true", :class => "h-[calc(100%-1rem)]", :tabindex => "-1"}
+  .relative.p-4.w-full.max-w-2xl.max-h-full
+    / Modal content
+    .relative.bg-white.rounded-lg.shadow.dark:bg-gray-700
+      / Modal header
+      .flex.items-center.justify-between.p-4.md:p-5.border-b.rounded-t.dark:border-gray-600
+        %h3.text-xl.font-semibold.text-gray-900.dark:text-white
+          Terms of Service
+        %button.text-gray-400.bg-transparent.hover:bg-gray-200.hover:text-gray-900.rounded-lg.text-sm.w-8.h-8.ms-auto.inline-flex.justify-center.items-center.dark:hover:bg-gray-600.dark:hover:text-white{"data-modal-hide" => "default-modal", :type => "button"}
+          %svg.w-3.h-3{"aria-hidden" => "true", :fill => "none", :viewbox => "0 0 14 14", :xmlns => "http://www.w3.org/2000/svg"}
+            %path{:d => "m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6", :stroke => "currentColor", "stroke-linecap" => "round", "stroke-linejoin" => "round", "stroke-width" => "2"}
+          %span.sr-only Close modal
+      / Modal body
+      .p-4.md:p-5.space-y-4
+        %p.text-base.leading-relaxed.text-gray-500.dark:text-gray-400
+          With less than a month to go before the European Union enacts new consumer privacy laws for its citizens, companies around the world are updating their terms of service agreements to comply.
+        %p.text-base.leading-relaxed.text-gray-500.dark:text-gray-400
+          The European Union’s General Data Protection Regulation (G.D.P.R.) goes into effect on May 25 and is meant to ensure a common set of data rights in the European Union. It requires organizations to notify users as soon as possible of high-risk data breaches that could personally affect them.
+      / Modal footer
+      .flex.items-center.p-4.md:p-5.border-t.border-gray-200.rounded-b.dark:border-gray-600
+        %button.text-white.bg-blue-700.hover:bg-blue-800.focus:ring-4.focus:outline-none.focus:ring-blue-300.font-medium.rounded-lg.text-sm.px-5.text-center.dark:bg-blue-600.dark:hover:bg-blue-700.dark:focus:ring-blue-800{:class => "py-2.5", "data-modal-hide" => "default-modal", :type => "button"} I accept
+        %button.px-5.ms-3.text-sm.font-medium.text-gray-900.focus:outline-none.bg-white.rounded-lg.border.border-gray-200.hover:bg-gray-100.hover:text-blue-700.focus:z-10.focus:ring-4.focus:ring-gray-100.dark:focus:ring-gray-700.dark:bg-gray-800.dark:text-gray-400.dark:border-gray-600.dark:hover:text-white.dark:hover:bg-gray-700{:class => "py-2.5", "data-modal-hide" => "default-modal", :type => "button"} Decline
 
 
-%div{ class: "grid grid-cols-2 md:grid-cols-4 gap-4 p-4" }
+
+%section{class: "mt-8", id: "hero-section-2", "data-aos": "zoom-in", "data-controller": "landing--gallery"}
+  %div{class: "py-3 sm:py-6 text-center"}
+    %h2{class: "font-messiri text-red-500 text-2xl font-medium uppercase lg:text-3xl"}
+      = t "landing.examples.h2"
+
+  %div{class: "grid grid-cols-2 md:grid-cols-3 gap-4"}
+    - (1..3).each do |i|
+      = image_tag("#{i}-min.jpg", "data-aos": "zoom-in", alt: "Изделие #{i}", loading: 'lazy', class: "cursor-pointer rounded-lg shadow hover:shadow-lg", data: { "modal-target": "image-modal-#{i}", "modal-toggle": "image-modal-#{i}" })
+
   - (1..3).each do |i|
-    = image_tag("#{i}-min.jpg", alt: "Изображение #{i}", class: "cursor-pointer rounded-lg shadow hover:shadow-lg", data: { modal_target: "image-modal-#{i}", modal_toggle: "image-modal-#{i}" })
-
-- (1..3).each do |i|
-  %div{ id: "image-modal-#{i}", tabindex: "-1", "aria-hidden": "true", class: "hidden fixed inset-0 z-50 overflow-y-auto" }
-    %div{ class: "flex items-center justify-center h-full" }
-      %div{ class: "relative p-4 w-full max-w-lg md:max-w-2xl h-auto" }
-        %div{ class: "relative bg-white rounded-lg shadow dark:bg-gray-700" }
-          %button{ type: "button", class: "absolute top-3 right-3 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8", data: { modal_hide: "image-modal-#{i}" } }
-            %svg{ class: "w-3 h-3", aria: { hidden: "true" }, xmlns: "http://www.w3.org/2000/svg", fill: "none", viewBox: "0 0 14 14" }
-              %path{ stroke: "currentColor", "stroke-linecap": "round", "stroke-linejoin": "round", "stroke-width": "2", d: "m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" }
+    %div{id: "image-modal-#{i}", tabindex: "-1", "aria-hidden": "true", class: "font-messiri fixed z-50 inset-0 overflow-y-auto hidden"}
+      %div{class: "flex items-center justify-center min-h-screen bg-black bg-opacity-50"}
+        %div{class: "bg-white p-6 rounded-2xl shadow-md w-1/2 relative"}
+          %div{class: "flex justify-end"}
+            %button{id: "closeModal-#{i}", class: "text-gray-700 hover:text-red-500", data: { modal_hide: "image-modal-#{i}" }}
+              %svg{class: "w-6 h-6", fill: "none", stroke: "currentColor", viewBox: "0 0 24 24", xmlns: "http://www.w3.org/2000/svg"}
+                %path{d: "M6 18L18 6M6 6l12 12", "stroke-linecap": "round", "stroke-linejoin": "round", "stroke-width": "2"}
+          %h2{class: "text-2xl font-bold mb-4 text-center"}
+            = t("landing.examples.image_title_#{i}")
           = image_tag("#{i}-min.jpg", alt: "Изображение #{i}", class: "w-full h-auto rounded-lg")
