--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -50,7 +50,9 @@
     -# Modal dialog contact form
     = cache 'contact_form' do
       = render "shared/contact_form"
-
+    -# Modal image galery
+    = cache 'image_galery' do
+      = render "shared/image_gallery_modal"
 
     -# Scroll to Top button
     %div{class: "fixed bottom-10 end-10"}
