--- a/app/views/shared/_3_hero_section.html.haml
+++ b/app/views/shared/_3_hero_section.html.haml
@@ -3,18 +3,6 @@
     %h2{class: "font-messiri text-red-500 text-2xl font-medium uppercase lg:text-3xl"}
       = t "landing.examples.h2"
 
-  %div{class: "grid grid-cols-2 md:grid-cols-3 gap-4"}
+  %div{class: "grid grid-cols-2 md:grid-cols-4 gap-4 place-content-center"}
     - (1..3).each do |i|
-      = image_tag("#{i}-min.jpg", "data-aos": "zoom-in", alt: "Изделие #{i}", loading: 'lazy', class: "cursor-pointer rounded-lg shadow hover:shadow-lg", data: { "modal-target": "image-modal-#{i}", "modal-toggle": "image-modal-#{i}" })
-
-  - (1..3).each do |i|
-    %div{id: "image-modal-#{i}", tabindex: "-1", "aria-hidden": "true", class: "font-messiri fixed z-50 inset-0 overflow-y-auto hidden"}
-      %div{class: "flex items-center justify-center min-h-screen bg-black bg-opacity-50"}
-        %div{class: "bg-white p-6 rounded-2xl shadow-md w-1/2 relative"}
-          %div{class: "flex justify-end"}
-            %button{id: "closeModal-#{i}", class: "text-gray-700 hover:text-red-500", data: { modal_hide: "image-modal-#{i}" }}
-              %svg{class: "w-6 h-6", fill: "none", stroke: "currentColor", viewBox: "0 0 24 24", xmlns: "http://www.w3.org/2000/svg"}
-                %path{d: "M6 18L18 6M6 6l12 12", "stroke-linecap": "round", "stroke-linejoin": "round", "stroke-width": "2"}
-          %h2{class: "text-2xl font-bold mb-4 text-center"}
-            = t("landing.examples.image_title_#{i}")
-          = image_tag("#{i}-min.jpg", alt: "Изображение #{i}", class: "w-full h-auto rounded-lg")
+      = image_tag("#{i}-min.jpg", "data-aos": "zoom-in", alt: "Изделие #{i}", loading: 'lazy', class: "cursor-pointer rounded-lg shadow hover:shadow-lg max-h-[600px] w-auto object-cover", data: { "modal-target": "image-modal-#{i}", "modal-toggle": "image-modal-#{i}" })
