--- a/app/views/shared/_3_hero_section.html.haml
+++ b/app/views/shared/_3_hero_section.html.haml
@@ -1,4 +1,4 @@
-%section{class: "mt-8", id: "hero-section-2", "data-aos": "zoom-in", "data-controller": "landing--gallery"}
+%section{class: "font-messiri relative items-center w-full px-5 py-12 mx-auto md:px-12 lg:px-24 max-w-7xl", id: "hero-section-2", "data-aos": "zoom-in", "data-controller": "landing--gallery"}
   %div{class: "py-3 sm:py-6 text-center"}
     %h2{class: "font-messiri text-red-500 text-2xl font-medium uppercase lg:text-3xl"}
       = t "landing.examples.h2"
