--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -15,27 +15,29 @@
 :javascript
   fbq('track', 'ViewContent');
 
-= turbo_frame_tag dom_id(@article), src: article_path(@article) do
-  %div{id: "article_skeleton", data: {turbo_frame: "_top"}}
-    %div{class: "min-h-screen bg-white mt-12"}
-      %div{class: "max-w-4xl mx-auto px-4 py-8"}
-        %div{class: "animate-pulse space-y-4"}
-          %div{class: "h-24 bg-gray-300 rounded w-full"}
-      %div{class: "max-w-4xl mx-auto px-4 py-8"}
-        %div{class: "animate-pulse space-y-4"}
-          %div{class: "h-4 bg-gray-300 rounded w-2/3"}
-          %div{class: "h-4 bg-gray-300 rounded"}
-          %div{class: "h-4 bg-gray-300 rounded"}
-          %div{class: "h-4 bg-gray-300 rounded w-1/2"}
-          %div{class: "h-4 bg-gray-300 rounded"}
-          %div{class: "h-4 bg-gray-300 rounded"}
-          %div{class: "h-4 bg-gray-300 rounded w-3/4"}
-        %div{class: "animate-pulse space-y-4 mt-12"}
-          %div{class: "h-4 bg-gray-300 rounded w-2/3"}
-          %div{class: "h-4 bg-gray-300 rounded"}
-          %div{class: "h-4 bg-gray-300 rounded"}
-          %div{class: "h-4 bg-gray-300 rounded w-1/2"}
-          %div{class: "h-4 bg-gray-300 rounded"}
-          %div{class: "h-4 bg-gray-300 rounded"}
+%div{class: "container max-w-7xl mx-auto my-10 font-messiri"}
+  %div{class: "flex flex-wrap justify-between"}
+    %div{class: "w-full px-4"}
+      %section{class: "p-5 sm:p-10 md:p-16 relative font-messiri"}
+        - if @article.image.present?
+          %div{class: "bg-cover bg-center text-center overflow-hidden", style: "min-height: 450px; background-image: url('#{url_for(@article.image)}')", title: @article.title, role: "img", "aria-label": @article.title}
+        - else
+          %div{class: "bg-cover bg-center text-center overflow-hidden", style: "min-height: 450px; background-image: url('#{asset_path("favicon.png")}')", title: @article.title, role: "img", "aria-label": @article.title}
+        %div{class: "max-w-5xl mx-auto mb-8"}
+          %div{class: "mt-3 bg-white rounded-b lg:rounded-b-none lg:rounded-r flex flex-col justify-between leading-normal"}
+            %div{class: "bg-white relative top-0 -mt-32 p-5 sm:p-10"}
+              %h1{class: "text-stone-900 font-bold text-3xl mb-2"}
+                = @article.title
+              %blockquote{class: "text-base leading-8 my-5 text-stone-700 mb-4 text-2xl border-s-4 border-stone-300 p-4 shadow-md"}
+                = @article.description
+              
+              -# AdSense block
+              %script{:async => "", :crossorigin => "anonymous", :src => "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3829218691602401"}
+              %ins.adsbygoogle{"data-ad-client" => "ca-pub-3829218691602401", "data-ad-format" => "fluid", "data-ad-layout" => "in-article", "data-ad-slot" => "4746497666", :style => "display:block; text-align:center;"}
+              :javascript
+                (adsbygoogle = window.adsbygoogle || []).push({});
 
-= render @article
+              %p{class: "text-base leading-8 my-5", "data-turbo": "false"}
+                = @article.body
+          %div{class: "text-end p-4"}
+            = link_to "#{t ("service.back")}", articles_path, "data-turbo": "false", class: "justify-end text-xl hover:border-b-2 hover:border-red-500 text-stone-500 hover:text-stone-900"
