--- a/app/views/shared/_image_gallery_modal.html.haml
+++ b/app/views/shared/_image_gallery_modal.html.haml
@@ -1,5 +1,5 @@
 - (1..3).each do |i|
-  %div{id: "image-modal-#{i}", tabindex: "-1", "aria-hidden": "true", class: "font-messiri fixed z-50 inset-0 overflow-y-auto hidden"}
+  %div{id: "image-modal-#{i}", tabindex: "-1", "aria-hidden": "true", class: "font-messiri fixed z-50 inset-0 overflow-y-auto hidden", data: { modal_target: "image-modal-#{i}" }}
     %div{class: "flex items-center justify-center min-h-screen"}
       %div{class: "bg-white p-6 rounded-2xl shadow-md w-5/6 relative"}
         %div{class: "flex justify-end"}
