--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,10 +15,12 @@
 
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload", nonce: true
     = stylesheet_link_tag "application", "https://fonts.googleapis.com/css2?family=El+Messiri:wght@400..700&display=swap", "https://fonts.googleapis.com/css2?family=Bad+Script&family=messiri:wght@400..700&display=swap", "inter-font", "data-turbo-track": "reload", nonce: true
+    = stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload", nonce: true
     = stylesheet_link_tag "custom", "data-turbo-track": "reload", nonce: true
+    = stylesheet_link_tag "aos", "data-turbo-track": "reload", nonce: true
     = javascript_include_tag "application", "data-turbo-track": "reload", defer: true, async: true, nonce: true
+    = javascript_include_tag "aos", "data-turbo-track": "reload", defer: true, async: true, nonce: true
 
     -# Meta Pixel Code
     %meta{content: "c4iyqbhq6lzkda2zk3t9xgbnd162ag", name: "facebook-domain-verification"}
@@ -61,15 +63,11 @@
       %div{id: "scroll-to-top", class: "w-24 absolute z-10 invisible inline-block transition-opacity duration-300", "data-popover": "", role: "tooltip"}
         %p{class: "font-messiri text-md text-stone-600"} До початку
     
-    -# Animate styles
-    = javascript_include_tag "aos", "data-turbo-track": "reload", defer: true, async: true, nonce: true
-    = stylesheet_link_tag "aos", "data-turbo-track": "reload", nonce: true
-
     -# FlowbiteJS
-    %link{href: "https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.5.1/flowbite.min.css", rel: "stylesheet", nonce: true}
-    %script{async: true, src: "https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.5.1/flowbite.min.js", nonce: true}
+    -#%link{href: "https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.5.1/flowbite.min.css", rel: "stylesheet", nonce: true}
+    -#%script{async: true, src: "https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.5.1/flowbite.min.js", nonce: true}
 
     -# Cookies bar
     = render "shared/cookies_bar" if @cookie_value.nil?
 
-    %script{async: true, crossorigin: "anonymous", src: "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3829218691602401"}
+    -#%script{async: true, crossorigin: "anonymous", src: "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3829218691602401"}
