--- a/app/views/shared/_image_gallery_modal.html.haml
+++ b/app/views/shared/_image_gallery_modal.html.haml
@@ -6,4 +6,4 @@
           %button{id: "closeModal-#{i}", class: "text-gray-700 hover:text-red-500", data: { modal_hide: "image-modal-#{i}" }}
             %svg{class: "w-6 h-6", fill: "none", stroke: "currentColor", viewBox: "0 0 24 24", xmlns: "http://www.w3.org/2000/svg"}
               %path{d: "M6 18L18 6M6 6l12 12", "stroke-linecap": "round", "stroke-linejoin": "round", "stroke-width": "2"}
-        = image_tag("#{i}-min.jpg", alt: "Изображение #{i}", class: "w-auto h-dvh max-v-dvh rounded-lg")
+        = image_tag("#{i}-min.jpg", alt: "Изображение #{i}", class: "w-full h-5/6 max-h-5/6 rounded-lg")
